--- a/myDjango/templates/login.html
+++ b/myDjango/templates/login.html
@@ -13,6 +13,15 @@
         {{msg}}
         <img src="/static/a.jpg"  alt="上海鲜花港 - 郁金香" />
     </form>
+    {% for item in li %}
+        <h1>{{ item }}</h1>
+    {% endfor %}
 
+    {% for item in dc %}
+        <h1>{{ item }}</h1>
+    {% endfor %}
+
+    <div>{{ li.0 }}##{{ li.1 }}--{{ li.2}}**{{ li.3 }}</div>
+    <div>{{ dc.a }}##{{ dc.b }}</div>
 </body>
 </html>
