--- a/myDjango/templates/getStu.html
+++ b/myDjango/templates/getStu.html
@@ -8,7 +8,7 @@
     <table>
         <thead>
             <tr>
-                <th>姓名</th>
+                <th>姓名|<a href="/addStu/">添加</a></th>
                 <th>班级</th>
             </tr>
         </thead>
