--- a/myDjango/templates/addStu.html
+++ b/myDjango/templates/addStu.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form>
+    <form method="post", action="/addStu/">
         <p>请输入学生姓:<input type="text", name="stu_name"></p>
         <p>请选择学生班级:<input type="text", name="class_name"></p>
         <input type="submit">
