--- a/myDjango/templates/addClass.html
+++ b/myDjango/templates/addClass.html
@@ -7,7 +7,7 @@
 <body>
     <form method="post", action="/addClass/">
         <div>班级名字<input type="text", name="name" ></div>
-        <div>班级ID<input type="text", name="classId" ></div>
+<!--        <div>班级ID<input type="text", name="classId" ></div>-->
         <div><input type="submit" ></div>
     </form>
 </body>
