--- a/myDjango/templates/addStu.html
+++ b/myDjango/templates/addStu.html
@@ -5,10 +5,15 @@
     <title>Title</title>
 </head>
 <body>
-    <form method="post", action="/addStu/">
+    <form method="post", action="/addStu/" id="carform">
         <p>请输入学生姓:<input type="text", name="stu_name"></p>
-        <p>请选择学生班级:<input type="text", name="class_name"></p>
-        <input type="submit">
+            <input type="submit">
+    </form>
+        <select name="id", form="carform">
+            {% for item in id_list %}
+              <option value={{ item.id }}>{{ item.class_name }}</option>
+            {% endfor %}
+        </select>
     </form>
 </body>
 </html>
