--- a/myDjango/templates/getStu.html
+++ b/myDjango/templates/getStu.html
@@ -18,6 +18,7 @@
                 <td>{{ item.stu_name }}</td>
                 <td>{{ item.class_name }}</td>
                 <td><a href="/delStu?id={{ item.id }}">删除</a></td>
+                <td><a href="/delStu?id={{ item.id }}">编辑</a></td>
             </tr>
         {% endfor %}
         </tbody>
