--- a/myDjango/templates/addClass.html
+++ b/myDjango/templates/addClass.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <p>{{ msg }}</p>
     <form method="post", action="/addClass/">
         <div>班级名字<input type="text", name="name" ></div>
 <!--        <div>班级ID<input type="text", name="classId" ></div>-->
