--- a/myDjango/myapp/templates/showStu.html
+++ b/myDjango/myapp/templates/showStu.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+        <div><a href="{% url "addStu" %}">添加</a></div>
         {% for item in stu_list %}
-            <div>{{ item.stu_name }}--{{ item.sc.class_name }}--<a href="{% url "delStu" item.id %}">删除</a></div>
+            <div>{{ item.stu_name }}--{{ item.sc.class_name }}--<a href="{% url "delStu" item.id %}">删除</a>--<a href="{% url "editStu" item.id %}">编辑</a></div>
         {% endfor %}
 </body>
 </html>
