--- a/myDjango/myapp/templates/addClass.html
+++ b/myDjango/myapp/templates/addClass.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form method="post" action="{% url "addClass" %}">
+    <form method="post" action="{% url "myapp:addClass" %}">
         <div>班级: <input type="text" name="class_name"></div>
         <input type="submit">
     </form>
