--- a/myDjango/myapp/templates/editClass.html
+++ b/myDjango/myapp/templates/editClass.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form method="post", action="{% url "editClass" class_id %}">
+    <form method="post", action="{% url "myapp:editClass" class_id %}">
         <div>班级:<input type="text", name="class_name" value="{{ class_name.class_name }}"></div>
         </div>
         <div><input type="submit"></div>
