--- a/myDjango/myapp/templates/editStu.html
+++ b/myDjango/myapp/templates/editStu.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form method="post", action="{% url "editStu" stu_id %}">
+    <form method="post", action="{% url "myapp:editStu" stu_id %}">
         <div>学姓名:<input type="text", name="stu_name" value="{{ stu.stu_name }}"></div>
         <div>学生班级:
             <select name="sc_id">
