--- a/myDjango/templates/one_login.html
+++ b/myDjango/templates/one_login.html
@@ -8,6 +8,7 @@
     <form method="post", action="/one/login/">
         <div>姓名<input type="text"， name="name", value="{{ name }}"></div>
         <div>密码<input type="password", name="passwd", value="{{ passwd }}"></div>
+        <div><input type="checkbox", name="flag", value="1">记住密码</div>
         <input type="submit">
     </form>
 </body>
