--- a/myDjango/templates/register.html
+++ b/myDjango/templates/register.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form method="post", action="/one/getStu/">
+    <form method="post" action="/one/register/">
         <div>姓名:<input type="text" name="name"> </div>
         <div>密码:<input type="password" name="passwd"> </div>
         <input type="submit">
