--- a/myDjango/templates/token_login.html
+++ b/myDjango/templates/token_login.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <p>请登入</p>
     <form>
         <div>姓名:<input type="text", name="name"></div>
         <div>密码:<input type="password", name="passwd"></div>
