--- a/myDjango/templates/token_login.html
+++ b/myDjango/templates/token_login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>请登入</p>
-    <form>
+    <form  method="post" action="/one/token_login/">
         <div>姓名:<input type="text", name="name"></div>
         <div>密码:<input type="password", name="passwd"></div>
         <input type="submit">
